RESOLVED FIXED 193048
[iOS] Pressing Tab key doesn't move to next cell with Google Sheets
https://bugs.webkit.org/show_bug.cgi?id=193048
Summary [iOS] Pressing Tab key doesn't move to next cell with Google Sheets
Daniel Bates
Reported 2018-12-28 11:59:19 PST
DOM events for the tab key are not dispatched as a result pressing the tab key in a Google Sheets document does not behave as it does on Mac. Steps to reproduce: 1. Launch Safari. 2. Navigate to <https://sheets.google.com/>. 3. Open a spreadsheet. 4. Focus a cell. 5. Press the tab key. Then nothing happens. But the cell in the adjacent column on the right should be focused.
Attachments
Patch (2.09 KB, patch)
2018-12-28 12:18 PST, Daniel Bates
no flags
Patch (1.93 KB, patch)
2019-01-02 10:57 PST, Daniel Bates
dbates: review+
Patch - needs updated ChangeLog (3.21 KB, patch)
2019-01-22 17:03 PST, Daniel Bates
no flags
Daniel Bates
Comment 1 2018-12-28 11:59:30 PST
Daniel Bates
Comment 2 2018-12-28 12:18:37 PST
Created attachment 358120 [details] Patch I suspect the reason we added these key commands was to work around an issue where key events when pressing Tab or Shift + Tab inside a password field would not be sent to WebKit as a result of UIKit decision to disallow the tab character inside a password field for native apps. I will fix address the UIKit issue in <rdar://problem/46972559>. For now, I did not include a test. I will add a test in a follow up bug.
Daniel Bates
Comment 3 2018-12-28 12:20:37 PST
Comment on attachment 358120 [details] Patch err, this patch will Tab and Shift + Tab in password fields in break current shipping iOS. Need to add some compile-time guards.
Daniel Bates
Comment 4 2019-01-02 10:57:05 PST
Brent Fulgham
Comment 5 2019-01-04 13:19:03 PST
Comment on attachment 358185 [details] Patch LGTM. r=me.
Daniel Bates
Comment 6 2019-01-22 17:01:32 PST
Comment on attachment 358185 [details] Patch r-, this patch is insufficient as we need to support pressing tab to cycle out of form controls, such as <select>. Currently we make use of the fact that key commands are interpreted even though we do not have a keyboard on iPad.
Daniel Bates
Comment 7 2019-01-22 17:03:32 PST
Created attachment 359811 [details] Patch - needs updated ChangeLog
Daniel Bates
Comment 8 2019-01-25 14:32:07 PST
Comment on attachment 358185 [details] Patch I changed my mind. The original patch is OK as-is so long as it lands before bug #192824. When I r-'ed this patch it was before I had amended the patch on bug #192824 to support tab cycling from a focused <select> (and I got confused as to which patch was to blame - this one or the one on bug #192824 since I have both applied in my local repo :P). I've sorted it out, want this patch to land first, and updated the patch for bug #192824 to ensure it will not regress the fix made in this patch. Filed bug #193846 to add tests for this change.
Daniel Bates
Comment 9 2019-01-25 15:12:50 PST
Note You need to log in before you can comment on or make changes to this bug.